<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slide Puzzle</string>    
    
    <!-- SlidePuzzleActivity -->    
    <string name="menu_new">New Game</string>
    <string name="menu_scores">High Scores</string>
    <string name="menu_settings">Settings</string>
    <string name="new_high_score">New high score!</string>
    <string name="dialog_close">Close</string>

    <!-- HighScoreListActivity -->
    <string name="scores_title">High Scores</string>
    <string name="size_header">Size</string>
    <string name="time_header">Time</string>
    <string name="menu_clear">Reset scores</string>
    <string name="delete_dialog_title">Reset</string>
    <string name="delete_dialog_msg">All scores will be lost.</string>
    <string name="dialog_yes">OK</string>
    <string name="dialog_no">Cancel</string>
    
    <!-- PuzzlePreferenceActivity -->
    <string name="choose_image">Select image from</string>
    
    <string name="settings_title">Settings</string>
    <string name="appearance_settings_title">Appearance</string>
    <string name="mechanics_settings_title">Mechanics</string>
    <string name="menu_restore_defaults">Restore default settings</string>

    <string name="pref_title_show_statusbar">Show status bar</string>
    <string name="pref_summary_show_statusbar">Display the status bar</string>

    <string name="pref_title_show_timer">Show timer</string>
    <string name="pref_summary_show_timer">Display elapsed game time</string>
    
    <string name="pref_title_show_numbers">Show numbers</string>
    <string name="pref_summary_show_numbers">Display number on tiles</string>
    
    <string name="pref_title_show_borders">Show borders</string>
    <string name="pref_summary_show_borders">Display border around tiles</string>
    
    <string name="pref_title_blank">Blank location</string>
    <string name="pref_summary_blank">Blank location in finished puzzle</string>
    <string name="pref_blank_dialog_title">Select blank location</string>
    
    <string name="pref_title_size">Puzzle size</string>
    <string name="pref_summary_size">How large to make new puzzles</string>
    <string name="pref_size_dialog_title">Select size</string>

    <string name="pref_title_number_size">Number size</string>
    <string name="pref_summary_number_size">How large to draw numbers</string>
    <string name="pref_number_size_dialog_title">Select size</string>
    
    <string name="pref_title_show_image">Show image</string>
    <string name="pref_summary_show_image">Create tiles from an image</string> 
    
    <string name="pref_title_image_source">Image source</string>
    <string name="pref_summary_image_source">Select source to create tiles from</string>        
    <string name="pref_image_source_dialog_title">Select image</string>
    
    <string name="pref_title_border_color">Border color</string>
    <string name="pref_summary_border_color">Select color for borders</string> 
    
    <string name="pref_title_number_color">Number color</string>
    <string name="pref_summary_number_color">Select color for numbers</string> 

    <string name="pref_title_timer_color">Timer color</string>
    <string name="pref_summary_timer_color">Select color for timer</string> 

    <string name="pref_title_bg_color">Background color</string>
    <string name="pref_summary_bg_color">Select color for background</string> 

    <string name="pref_title_sound_on">Play sounds</string>
    <string name="pref_summary_sound_on">Toggle sound effects</string> 
</resources>
